# SpotSus

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 01-eda.ipynb  01_business_and_data_understanding.ipynb  02-adversarial_validation.ipynb  adversarial_validation.py  path.py  visualization.py
notebooks/configs/: model.yaml
notebooks/docs/: 02-adversarial_validation.md
src/: main.py  schema.py  util.py
src/api/: middleware.py  router.py
src/core/: lifespan.py  logging.py  metrics.py
