[project]
name = "findingsus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "altair>=6.0.0",
    "catboost>=1.2.8",
    "dvc>=3.64.2",
    "fastparquet>=2024.11.0",
    "mlflow>=3.7.0",
    "mrmr-selection>=0.2.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "parquet>=1.3.1",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "api-service",
    "loguru>=0.7.3",
    "redis>=7.1.0",
    "fastapi-limiter>=0.1.6",
    "prometheus-client>=0.23.1",
]

[project.optional-dependencies]
notebooks = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "polars>=1.36.0",
    "mrmr-selection>=0.2.8",
]

server = [
    "fastapi-limiter>=0.1.6",
    "fastapi[standard]>=0.124.2",
    "loguru>=0.7.3",
    "prometheus-client>=0.23.1",
    "redis>=7.1.0",
]
